app/globals.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

html {
  color-scheme: light dark;
}

img {
  max-width: 100%;
  display: block;
}

:root {
  --color-text: hsl(54, 100%, 6%);
  --color-surface: hsl(300, 100%, 99%);
  --color-primary: hsl(233, 42%, 49%);
  --color-secondary: hsl(249, 34%, 49%);
  --color-tertiary: hsl(169, 100%, 21%);
  --color-error: hsl(0, 75%, 42%);

  --font-size-0: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem);
  --font-size-1: clamp(1.35rem, calc(1.28rem + 0.37vw), 1.56rem);
  --font-size-2: clamp(1.62rem, calc(1.5rem + 0.58vw), 1.95rem);
  --font-size-3: clamp(1.94rem, calc(1.77rem + 0.87vw), 2.44rem);
  --font-size-4: clamp(2.33rem, calc(2.08rem + 1.25vw), 3.05rem);
  --font-size-5: clamp(2.8rem, calc(2.45rem + 1.77vw), 3.82rem);
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-text: hsl(300, 100%, 99%);
    --color-surface: hsl(54, 100%, 6%);
    --color-primary: hsl(235, 100%, 87%);
    --color-secondary: hsl(249, 100%, 87%);
    --color-tertiary: hsl(165, 63%, 61%);
    --color-error: hsl(6, 100%, 84%);
  }
}

body {
  font-size: var(--font-size-0);
  font-family: var(--font-family-body);
  line-height: 1.5;
  color: var(--color-text);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-family-display);
  line-height: 1.1;
  text-wrap: balance;
}

h1 {
  margin: 1em 0em;
  font-size: var(--font-size-5);
  color: var(--color-primary);
}

h2 {
  font-size: var(--font-size-4);
}

h3 {
  font-size: var(--font-size-3);
}

h4 {
  font-size: var(--font-size-2);
}

h5 {
  font-size: var(--font-size-1);
}

h6 {
  font-size: var(--font-size-0);
}

a {
  color: var(--color-primary);
}

a:hover,
a:focus {
  color: var(--color-tertiary);
}

::marker {
  color: var(--color-primary);
}

.wrapper {
  width: min(100% - 3rem, 55ch);
  margin-inline: auto;
}

.flow > :where(:not(:first-child)) {
  margin-top: 1em;
}

